--- a/src/docs/THANKS
+++ b/src/docs/THANKS
@@ -91,7 +91,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - COBOL                  Benny Baumann, Edward Hart
 - CoffeeScript           Trevor Burnham
 - ColdFusion             Diego
-- CSS                    Nigel McNie, Zéfling
+- CSS                    Nigel McNie, Zéfling, peterdd
 - Cuesheet               Benny Baumann
 - D                      Thomas Kuehne
 - Dart                   Edward Hart
