doc: Documentation update for Ceylon

--- a/src/docs/THANKS
+++ b/src/docs/THANKS
@@ -82,6 +82,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - CADDCL                 Roberto Rossi
 - CadLisp                Roberto Rossi
 - CDFG                   John Horigan
+- Ceylon                 Lucas Werkmeister
 - ChaiScript             Jason Turner, Jonathan Turner
 - Chapel                 Richard Molitor
 - CIL                    Marcus Griep
