--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -14,6 +14,7 @@ at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 
 Version 1.0.8.13
   -  Added language files
+     - Ceylon (Lucas Werkmeister)
   -  Improvements to language files (BenBE)
      * Fix minor issue with CSS (BenBE)
      * Fix compatibility for PHP 7 (pazuzu156)
