--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -14,18 +14,35 @@ at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 
 Version 1.0.8.13
   -  Added language files
-     - Ceylon (Lucas Werkmeister)
-  -  Improvements to language files (BenBE)
-     * Fix minor issue with CSS (BenBE)
-     * Fix compatibility for PHP 7 (pazuzu156)
+     * Ceylon (Lucas Werkmeister)
+     * eggdrop (CrazyCat)
+     * Julia (Curtis Vogt)
+     * Kotlin (Ole Kristian Sandum)
+     * Mathematica (Connor Glosser)
+     * Mercury (Sebastian Godelet)
+     * MetaPost (Maxime Chupin)
+     * phix (Pete Lomax)
+     * SASS (Javier Eguiluz)
+     * Swift (Ken Woo)
+     * TeXgraph (Patrick Fradin)
+     * Twig templates (Javier Eguiluz)
+     * windows batch (Lev)
+     * Xojo (Massimo Zappino)
+  -  Improvements to language files
+     * AutoIt: new version (Jonathan Bennett)
+     * C++11 keywords (Streusel)
+     * CSS attributes (BenBE)
+     * CSS: SVG fill styles (peterdd)
+     * Haskell: Non-standard string highlighting (Evan Czaplicki)
+     * Haskell: Quote mark handling (Sidharth Kapur)
+     * Lua: match comments non-greedily (Jerry)
+     * PowerBuilder: additional encoding constants (Doug Porter)
+     * QML updates (Thibaut Cuvelier)
      * Qt5 API for C++ language file (neochapay)
-     * Fix handling of strings in Haskell (evancz, sid-kap)
-     * Add some more encoding constant keywords for PowerBuilder (dougporter)
-     * Many new keywords for C++ and onwards (Streussel)
-     * Missing keywords in SQL (cblair91)
-     * Properly declare no highlighting of numbers in YAML (BenBE)
-     * Fix comments in Lua (-Jerry-)
-     * Included SVG specific styles for CSS (peterdd)
+     * SQL: ELSEIF keyword (Kris)
+     * YAML numbers specification (BenBE)
+  -  Fix compatibility for PHP 7 (pazuzu156)
+  -  Automatically run langcheck when committing code
 Version 1.0.8.12
   -  Added language files
      * AIMMS (Guido Diepen)
