--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,6 +13,8 @@ Please send any bug reports to BenBE@omorphia.de, or use the bug report tracker
 at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 
 Version 1.0.9.1
+  -  Added language files
+     * OpenSSH config (Kevin Ernst)
   -  Some minor tweaks for RFC822 email support (BenBE)
   -  Introduce strip_language function (phy25)
   -  Recognize additional file extensions (RealityRipple)
