add: Wolfram Language support
includes:

* multi-line and nested comments, e.g. (* abc (* def *) *)
* complex symbols, e.g. \[Pi]
* build-in functions for Wolfram Mathematica 8.0 (e.g. Table) with
* references to wolfram online docs.
* strings

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -16,6 +16,7 @@ Version 1.0.9.1
   -  Added language files
      * OpenSSH config (Kevin Ernst)
      * roff (Artur Iwicki)
+     * Wolfram (Mysterious Light)
   -  Some minor tweaks for RFC822 email support (BenBE)
   -  Introduce strip_language function (phy25)
   -  Recognize additional file extensions (RealityRipple)
