--- a/CHANGELOG
+++ b/CHANGELOG
@@ -29,6 +29,7 @@ Version 1.0.9.1
      * Matlab: Add keywords and functions from recent Matlab releases (apjanke)
      * MySQL: Some missing keywords (Abu3safeer)
      * MySQL: Updated documentation links (splitbrain)
+     * SciLab: Fix broken linking of keywords (BenBE)
      * SQL: Some missing keywords (peterdd)
 Version 1.0.9.0
   -  Add public/protected method & property visibility.
