--- a/CHANGELOG
+++ b/CHANGELOG
@@ -12,12 +12,15 @@ modified by me for consistency/bug fixing.
 Please send any bug reports to BenBE@omorphia.de, or use the bug report tracker
 at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 
+Version 1.0.9.2
+  -  Added language files
+     * QB64 (Fellippe Heitor)
+     * QB64 $NOPREFIX (Fellippe Heitor)
 Version 1.0.9.1
   -  Added language files
      * OpenSSH config (Kevin Ernst)
      * roff (Artur Iwicki)
      * Wolfram (Mysterious Light)
-     * QB64 (changes to Nigel McNie's work on qbasic.php made by Fellippe Heitor/QB64 Team)
   -  Some minor tweaks for RFC822 email support (BenBE)
   -  Introduce strip_language function (phy25)
   -  Recognize additional file extensions (RealityRipple)
